<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_color"
    android:orientation="vertical"
    app:layout_constraintEnd_toStartOf="parent"
    app:layout_constraintHorizontal_bias="0.473"
    app:layout_constraintStart_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="97dp"
        android:layout_marginTop="25dp"
        android:text="@string/signup"
        android:textColor="#df7154"
        android:textSize="60dp"

        android:fontFamily="@font/black_ops_one"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="238dp"
        android:layout_height="150dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/pngitem_6230347"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="193dp" />


    <EditText
        android:id="@+id/etEnterUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="User name"
        android:gravity="top"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:textColorHint="#464646"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textStyle="bold"
        android:gravity="top"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:textColorHint="#464646"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/etEnterPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textStyle="bold"
        android:gravity="top"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/password_"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:textColorHint="#464646"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/etEnterNIC"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textStyle="bold"
        android:gravity="top"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/national_id_number"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:textColorHint="#464646"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textStyle="bold"
        android:gravity="top"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/address"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:textColorHint="#464646"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEnterTel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textStyle="bold"
        android:gravity="top"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/contact_number"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:textColorHint="#464646"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSingIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:backgroundTint="#f6a049"
        android:text="SignUp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />



</LinearLayout>