<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_backgrounf_color_payment"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:background="@drawable/bg_view" />

    <GridLayout
        android:layout_width="387dp"
        android:layout_height="244dp"
        android:layout_below="@+id/top_view"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:columnCount="2"
        android:rowCount="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/staton2card"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"


            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/bike_parkingnew"
                    app:srcCompat="@drawable/parkingnew" />

                <TextView
                    android:id="@+id/station2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Station 2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bikeCount2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/available_bikes_"
                    android:textColor="@color/Green"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/BikeCountStation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="1"
                    android:textColor="#ea1c15"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/Station1card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"


            android:layout_marginRight="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    app:srcCompat="@drawable/parking" />

                <TextView
                    android:id="@+id/station1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Station 1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bikecount2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/available_bikes"
                    android:textColor="@color/Green"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/BikeCountStation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="1"
                    android:textColor="#ea1c15"
                    android:textStyle="bold"
                    android:textSize="40sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PaymentBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="680dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_orance"
        android:clickable="true"
        android:fontFamily="@font/carter_one"
        android:text="payment  details"
        android:textAlignment="center"
        android:textColor="#f1f1f1"
        android:textSize="22sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ScannerBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="750dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_orance"
        android:clickable="true"
        android:fontFamily="@font/carter_one"
        android:text="Scan Door QR code"
        android:textColor="#f1f1f1"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Hello_Text"
                    android:layout_width="266dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/pacifico"
                    android:text="Hello !"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/Ridetogo"
                    android:layout_width="93dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="320dp"
                    android:layout_marginTop="10dp"
                    android:text="Profile"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Hello_Text" />

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="57dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="317dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="20dp"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/usernew" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="360dp"
                    android:layout_height="144dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="142dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/orange_light_banner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/TopView"
                        android:layout_width="156dp"
                        android:layout_height="112dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bike2"
                        tools:layout_editor_absoluteY="15dp" />

                    <TextView
                        android:id="@+id/topViewPara"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/pedal_your_way_nto_a_healthier_you_and_a_greener_nearth_today"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/TopView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteY="36dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>






